
ChangeLog
 [ + added, - removed, * changed ]
 * 20Mar2013 Fixed paths in pyextrae.py
 + 20Mar2013 Added pyextrae.py module in src/others to instrument python programs
 * 15Mar2013 Added Fortran module with Extrae constant and function
                declarations
 * 12Mar2013 Modified SVN propset using
              svn propset svn:keywords "Date Revision Author HeadURL Id"
 * 12Mar2013 Code restructuring.
 * 11Mar2013 Changed the automatic generation of topologies for small online executions
 * 11Mar2013 Fixed Makefiles to distribute some missing files
 * 08Mar2013 Fixed minor compilation issues.
 * 08Mar2013 Extrae version 3.0rc1
 * 08Mar2013 Fixed compilation issues (made on-line support only available to the MPI tracing libraries).
             Fixed XML parse to skip comments.
             Hardware counters are no longer a requirement for the on-line spectral analysis.
             Enable sampling by default
 * 07Mar2013 Fixed minor compilation issues and changed the default configuration of the online example.
             Extrae version 3.0
             Added on-line spectral analysis.
 + 01Mar2013 Emit CPU through sched_getcpu at Init and Flushes.
             Removed MN specific code that no longer has sense.
 + 27Feb2013 Emit lock address when instrumenting named locks (MFB 2.3)
             Allow environment variables when parsing the XML file through the
               DynInst mutator (MFB 2.3).
             Add exclude-automatic-functions in the <user-functions> tag (MFB
               2.3).
             Allow cross-compiling for ARM through --enable-arm (MFB 2.3)
             Cleaned obj_table and changed into ApplicationTable (MFB 2.3)
 + 26Feb2013 Initial fork+wait+waitpid instrumentation under dyninst (MFB 2.3)
             Improved detection of binutils package (uses find)
 * 22Feb2013 Fixed bad instrumentation of GOMP_*_next using dyninst (MFB 2.3)
 * 20Feb2013 Added instrumentation for Intel omp_set_num_threads (which is