@@ -1,0 +1,7 @@
+#!/bin/bash
+
+export PYTHONPATH=@sub_PREFIXDIR@/lib:$PYTHONPATH
+export EXTRAE_CONFIG_FILE=./extrae.xml
+
+python ./test.py
+
